fixed metronome overlap onto soundpad

--- a/server/public/styles/main.css
+++ b/server/public/styles/main.css
@@ -45,8 +45,11 @@ header {
 
 
 #sound-pad {
+  z-index: -1;
+  position: fixed;
   width: 60vw;
   margin-left: 20vw;
+  margin-right: 0;
   margin-top: 25vh;
 }
 
